--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
 
 		var czmlDataArray = [];
 		czmlDataArray[0] = new czmlData("シカ・イノシシ・カモシカ", 'data/czml/shika.czml');
-		czmlDataArray[1] = new czmlData("ネコ・イヌ", 'data/czml/neko.czml');
+		czmlDataArray[1] = new czmlData("ネコ・イヌ", 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQmyTbGwuNVYUIYDUIYe3fGMnSKnySfYqDwQYlvo8-XarLkj45tgJOnnUKhIbM1pidEn8sSjvCnQaTq/pubhtml?gid=1147408501&single=true');
+		// czmlDataArray[1] = new czmlData("ネコ・イヌ", 'data/czml/neko.czml');
+		// https://docs.google.com/spreadsheets/d/e/2PACX-1vQmyTbGwuNVYUIYDUIYe3fGMnSKnySfYqDwQYlvo8-XarLkj45tgJOnnUKhIbM1pidEn8sSjvCnQaTq/pubhtml?gid=1147408501&single=true
 
 		//レイヤ切り替えメニュー作成
 
